* config/sh/sh.md (symPLT_label2reg): Force the initialization of the PIC register.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@36225 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2000-09-07  Alexandre Oliva  <aoliva@redhat.com>
+
+	* config/sh/sh.md (symPLT_label2reg): Force the initialization of
+	the PIC register.
+
 2000-09-06  H.J. Lu  (hjl@gnu.org)
 
 	* Makefile.in (clean_s1): Depend on stage_b.
