--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,8 @@
 2000-09-07  Alexandre Oliva  <aoliva@redhat.com>
 
+	* config/sh/sh.h (OVERRIDE_OPTIONS): Don't disable function
+	CSE unless generating PIC.
+
 	* config/sh/sh.md (symPLT_label2reg): Force the initialization of
 	the PIC register.
 
