* cp-demangle.c (status_allocation_failed): Rearrange whitespace. 	(demangle_type): Handle substitution candidates correctly in the 	face of special substitutions.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@36228 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libiberty/ChangeLog
+++ b/libiberty/ChangeLog
@@ -1,3 +1,9 @@
+2000-09-06  Alex Samuel  <samuel@codesourcery.com>
+
+	* cp-demangle.c (status_allocation_failed): Rearrange whitespace.
+	(demangle_type): Handle substitution candidates correctly in the
+	face of special substitutions.
+
 2000-09-05  Alex Samuel  <samuel@codesourcery.com>
 
 	* cp-demangle.c (demangle_encoding): Rename variable.
