* ir.texi: Document type nodes.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@36231 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,7 @@
+2000-09-07  Gabriel Dos Reis  <gdr@codesourcery.com>
+
+	* ir.texi: Document type nodes.
+
 2000-09-06  Mark Mitchell  <mark@codesourcery.com>
 
 	* cp-tree.h (init_cp_semantics): Declare.
