--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2000-09-07  Catherine Moore  <clm@redhat.com>
+
+        * unroll.c (unroll_loop): Check for unconditional jumps
+        to loop continuation.  Delete if n_iterations is 1.
+        (ujump_to_loop_cont): New routine.
+
 2000-09-07  Bernd Schmidt  <bernds@redhat.co.uk>
 
 	* rtl.c (class_narrowest_mode): Add entries for MODE_VECTOR_INT and
