* c-common.c (time_char_table): Allow %#b and %#h.
testsuite:
	* gcc.dg/format-ext-3.c: Test %#b and %#h as formats that should
	be accepted.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@36241 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2000-09-07  Joseph S. Myers  <jsm28@cam.ac.uk>
+
+	* c-common.c (time_char_table): Allow %#b and %#h.
+
 2000-09-07 Herman A.J. ten Brugge <Haj.Ten.Brugge@net.HCC.nl>
 
 	* reorg.c (find_end_label): If the basic block reorder pass moves the
