2000-09-05  Alexandre Petit-Bianco  <apbianco@cygnus.com>
	* verify.c (merge_types): Load the types to merge if necessary.

(http://gcc.gnu.org/ml/gcc-patches/2000-09/msg00245.html)


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@36243 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/java/ChangeLog
+++ b/gcc/java/ChangeLog
@@ -2,6 +2,10 @@
 
 	* lang-specs.h: Also recognize `-femit-class-files'.
 
+2000-09-05  Alexandre Petit-Bianco  <apbianco@cygnus.com>
+
+	* verify.c (merge_types): Load the types to merge if necessary.
+
 2000-09-02  Anthony Green  <green@redhat.com>
 
 	* jcf-io.c: Include zlib.h.
