* md5.c: #include "ansidecl.h".
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@36244 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libiberty/ChangeLog
+++ b/libiberty/ChangeLog
@@ -1,3 +1,7 @@
+2000-09-07  Michael Sokolov  <msokolov@ivan.Harhan.ORG>
+
+	* md5.c: #include "ansidecl.h".
+
 2000-09-06  Alex Samuel  <samuel@codesourcery.com>
 
 	* cp-demangle.c (status_allocation_failed): Rearrange whitespace.
