* bb-reorder.c (fixup_reorder_chain): Add jump in new block         after switch for CASE_DROPS_THROUGH.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@36253 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,10 @@
 2000-09-07  Richard Henderson  <rth@cygnus.com>
 
+	* bb-reorder.c (fixup_reorder_chain): Add jump in new block
+	after switch for CASE_DROPS_THROUGH.
+
+2000-09-07  Richard Henderson  <rth@cygnus.com>
+
 	* loop.c (strength_reduce): Call check_ext_dependant_givs.
 	Properly extend the biv initial value for the giv.
 	(record_biv): Zero ext_dependant.
