* cpplib.h (struct cpp_options): Add user_label_prefix member, 	left out of commit which removed cppulp.c.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@36254 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2000-09-07  Zack Weinberg  <zack@wolery.cumb.org>
+
+	* cpplib.h (struct cpp_options): Add user_label_prefix member,
+	left out of commit which removed cppulp.c.
+
 2000-09-07  Richard Henderson  <rth@cygnus.com>
 
 	* bb-reorder.c (fixup_reorder_chain): Add jump in new block
