Fix ia64-linux compiler abort on perl. 	* reload.c (push_reload): Use CLASS_CANNOT_CHANGE_MODE_P in addition 	to CLASS_CANNOT_CHANGE_MODE. 	* config/ia64/ia64.h (CLASS_CANNOT_CHANGE_MODE_P): True only if the 	mode classes are different.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@36256 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,10 @@
+2000-09-07  Jim Wilson  <wilson@cygnus.com>
+
+	* reload.c (push_reload): Use CLASS_CANNOT_CHANGE_MODE_P in addition
+	to CLASS_CANNOT_CHANGE_MODE.
+	* config/ia64/ia64.h (CLASS_CANNOT_CHANGE_MODE_P): True only if the
+	mode classes are different.
+
 2000-09-07  Zack Weinberg  <zack@wolery.cumb.org>
 
 	* cpplib.h (struct cpp_options): Add user_label_prefix member,
