Fix computation of need_mode in choose_reload_regs.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@36264 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -2,6 +2,8 @@
 
 	* combine.c (combine_simplify_rtx): Try to simplify VEC_SELECT of a
 	VEC_CONCAT.
+	From Richard Henderson:
+	* reload1.c (choose_reload_regs): Compute need_mode properly.
 
 2000-09-07  Richard Henderson  <rth@cygnus.com>
 
