--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2000-09-08  Alexandre Oliva  <aoliva@redhat.com>
+
+	* config/sh/sh.md (symPLT_label2reg): Use operand3 for PIC reg.
+
 2000-09-08  Bernd Schmidt  <bernds@redhat.co.uk>
 
 	* combine.c (combine_simplify_rtx): Try to simplify VEC_SELECT of a
