* arm.c: Don't include tm.h directly.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@36269 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2000-09-08  Richard Earnshaw  <rearnsha@arm.com>
+
+	* arm.c: Don't include tm.h directly.
+
 Fri Sep  8 14:34:56 MET DST 2000  Jan Hubicka  <jh@suse.cz>
 
 	* recog.c (validate_replace_rtx_1): Fix confusion about equality
