* cp-demangle.c: Fix copyright banner.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@36271 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libiberty/ChangeLog
+++ b/libiberty/ChangeLog
@@ -1,3 +1,7 @@
+2000-09-08  Alex Samuel  <samuel@codesourcery.com>
+
+	* cp-demangle.c: Fix copyright banner.
+
 2000-09-07  Michael Sokolov  <msokolov@ivan.Harhan.ORG>
 
 	* md5.c: #include "ansidecl.h".
