--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2000-09-08  Stephane Carrez  <Stephane.Carrez@worldnet.fr>
+
+	* MAINTAINERS: Add myself as 68hc11 port maintainer.
+
 2000-09-06  Alexandre Oliva  <aoliva@redhat.com>
 
 	* Makefile.in (all-zlib): Added dummy target.
