--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,14 @@
+2000-09-10  Michael Hayes  <mhayes@cygnus.com>
+
+	* loop.c (struct movables): New.
+	(num_movables): Move into struct movables.
+	(the_movables): Change type to struct movables.
+	(ignore_some_movables): Change struct movable arg to struct movables.
+ 	(force_movables, combine_movables, regs_match_p): Likewise.
+	(rtx_equal_for_loop_p, move_movables): Likewise.
+	(scan_loop): Change movables to be of type struct movables.
+	Replace last_movable with field in movables structure.
+
 2000-09-08  Zack Weinberg  <zack@wolery.cumb.org>
 
 	* c-pragma.c: Don't elide entire file if !HANDLE_GENERIC_PRAGMAS.
