* typeck.c (build_java_array_type): Correct first parameter 	in ADJUST_FIELD_ALIGN invocation.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@36280 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/java/ChangeLog
+++ b/gcc/java/ChangeLog
@@ -1,3 +1,8 @@
+2000-09-09  Geoffrey Keating  <geoffk@cygnus.com>
+
+	* typeck.c (build_java_array_type): Correct first parameter
+	in ADJUST_FIELD_ALIGN invocation.
+
 2000-09-06  Tom Tromey  <tromey@cygnus.com>
 
 	* lang-specs.h: Also recognize `-femit-class-files'.
