Recognize m6811-elf and m6812-elf
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@36282 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2000-09-09  Stephane Carrez  <Stephane.Carrez@worldnet.fr>
+
+	* configure.in: Recognize m6811-elf and m6812-elf.
+	* configure: Regenerate.
+
 2000-09-09  Geoff Keating  <geoffk@cygnus.com>
 
 	* recog.c (validate_replace_rtx_1): Correct MODE parameter in call
