--- a/libffi/ChangeLog
+++ b/libffi/ChangeLog
@@ -1,3 +1,8 @@
+2000-09-10  Alexandre Oliva  <aoliva@redhat.com>
+
+	* acinclude.m4: Include libtool macros from the top level.
+	* aclocal.m4, configure: Rebuilt.
+
 2000-08-22  Alexandre Oliva  <aoliva@redhat.com>
 
 	* configure.in [i*86-*-freebsd*] (TARGET, TARGETDIR): Set.
