--- a/libffi/ChangeLog
+++ b/libffi/ChangeLog
@@ -1,5 +1,9 @@
 2000-09-10  Alexandre Oliva  <aoliva@redhat.com>
 
+	* config.guess, config.sub, install-sh: Removed.
+	* ltconfig, ltmain.sh, missing, mkinstalldirs: Likewise.
+	* Makefile.in: Rebuilt.
+
 	* acinclude.m4: Include libtool macros from the top level.
 	* aclocal.m4, configure: Rebuilt.
 
