* Updated from libtool multi-language branch.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@36295 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/libltdl/ChangeLog
+++ b/libjava/libltdl/ChangeLog
@@ -1,3 +1,7 @@
+2000-09-10  Alexandre Oliva  <aoliva@redhat.com>
+
+	* Updated from libtool multi-language branch.
+
 2000-02-14  Tom Tromey  <tromey@cygnus.com>
 
 	* ltdl.c: If HAVE_BOEHM_GC defined, includ gc.h.
