--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,5 +1,8 @@
 2000-09-10  Alexandre Oliva  <aoliva@redhat.com>
 
+	* acinclude.m4: Simplify the tests for CC and CXX.
+	* aclocal.m4, configure: Rebuilt.
+
 	* acinclude.m4: Include libtool macros from the source tree.
 	* aclocal.m4, configure: Rebuilt.
 
