--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2000-09-10  Denis Chertykov  <denisc@overta.ru>
+
+	* genoutput.c (output_insn_data): Translate <NEWLINE> to \n\ while
+	outputting templates with many lines.
+
 2000-09-10  Stephane Carrez  <Stephane.Carrez@worldnet.fr>
 
 	* libgcc2.h: Use LONG_LONG_TYPE_SIZE instead of MIN_UNITS_PER_WORD
