* splay-tree.h (splay_tree_predecessor): Declare.
	* splay-tree.c (splay_tree_predecessor): New function.
	(splay_tree_successor): Likewise.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@36304 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libiberty/ChangeLog
+++ b/libiberty/ChangeLog
@@ -1,3 +1,8 @@
+2000-09-10  Mark Mitchell  <mark@codesourcery.com>
+
+	* splay-tree.c (splay_tree_predecessor): New function.
+	(splay_tree_successor): Likewise.
+
 2000-09-10  Hans-Peter Nilsson  <hp@axis.com>
 
 	* testsuite/demangle-expected: Add four tests for type_info
